bug fix for incorrect cashflow suppression. Added unit tests to verify.